# Karta.py

./: README.md  compilemain.py  create_installer.sh  installer.spec  karta_config.yaml  main.py  pyproject.toml  requirements.txt  runserver.py  sampletests.py  test_pyinstaller.py
app_object_factory/: w3schools.py
docs/: TestCaseFormat.odt
features/: inline_data.feature  test.yaml  test2.yaml  test3.feature  test4.feature  test5.kriya  w3schools.feature
framework/core/interfaces/: FeatureParser.py  StepRunner.py  lifecycle.py  test_interfaces.py
framework/core/models/: Constants.py  Context.py  TestCatalog.py  TestFeature.py  TestProperties.py  TestScenario.py  TestStep.py  VarClass.py  configuration.py  generic.py  (+4 more)
framework/plugins/: catalog.py  dependency_injector.py  gherkin.py  kriya.py  listeners.py
framework/runner/: __init__.py  events.py  runtime.py
framework/server/: main.py  models.py
framework/tests/: testcontext.py
framework/web/: factory.py  models.py  wrapper.py
karta/: __init__.py
karta/plugins/: catalog.py  dependency_injector.py  gherkin.py  kriya.py  listeners.py  step_identifier.py
karta/runner/: __init__.py  events.py  runtime.py
karta/server/: __init__.py  models.py  routes.py
karta/tests/: test_step_definition_matching.py  testcontext.py
karta/web/: factory.py  models.py
locators/: W3SchoolsApp.yaml
properties/: runinfo.yaml  webdriver_config.yaml
properties/test/: testproperties.ini  testproperties.json
samples/features/: test2.yaml
samples/step_definitions/: __init__.py  stepdefs.py  stepdefs2.py
samples/templates/: index.html
step_definitions/: MyClass.py  __init__.py  _w3schools.py  hooks.py  inline_data_stepdefs.py  stepdefs.py  stepdefs2.py  web_automation_steps.py
tests/: sampletests.py  test_image_utils.py  test_incidents.py  test_random.py  test_regex.py  test_web_automation.py  w3schools.py
tests/parser/: gherkin_parser_test.py
tests/resources/: RuleTest.feature  test1.feature
(+49 files in other folders)
